third_party/move/move-compiler-v2/tests/ability-check/v1-borrow-tests/return_type_mismatch_and_unused_resource.exp

Diagnostics:
error: cannot return a reference derived from value since it is not a parameter
   ┌─ tests/ability-check/v1-borrow-tests/return_type_mismatch_and_unused_resource.move:13:9
   │
12 │         let r = &u;
   │                 -- previous local borrow
13 │         r
   │         ^ returned here


Diagnostics:
error: local `x` of type `M::X` does not have the `drop` ability
  ┌─ tests/ability-check/v1-borrow-tests/return_type_mismatch_and_unused_resource.move:6:9
  │
6 │         &x;
  │         ^^ implicitly dropped here since it is no longer used
